Using Bootstrap for excercise form.

--- a/src/main/resources/templates/excercise.html
+++ b/src/main/resources/templates/excercise.html
@@ -3,17 +3,33 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Grammati</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" th:href="@{/styles.css}"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 <body>
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <ul class="navbar-nav">
+        <li class="nav-item active">
+            <a class="nav-link" href="#">Grammati</a>
+        </li>
+    </ul>
+</nav>
+
 <form th:object="${excercise}" method="POST">
     <h1 th:text="${excercise.question}">EMPTY</h1>
-    <div th:each="answer : ${excercise.answers}">
-        <input name="answers" type="radio" th:value="${answer}"/>
-        <span th:text="${answer}">ANSWER</span>
+    <div th:each="answer : ${excercise.answers}" class="form-check">
+        <label class="form-check-label">
+            <input name="answers" type="radio" class="form-check-input" th:value="${answer}"/><span th:text="${answer}">ANSWER</span>
+        </label>
         <br/>
     </div>
-    <button>Answer</button>
+    <button type="submit" class="btn btn-success">Answer</button>
 </form>
 </body>
 </html>
