--- a/src/main/resources/templates/confirmPage.html
+++ b/src/main/resources/templates/confirmPage.html
@@ -12,6 +12,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 <body>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <ul class="navbar-nav">
+        <li class="nav-item active">
+            <a class="nav-link" href="#">Grammati</a>
+        </li>
+    </ul>
+</nav>
 <h1>Please check you email and confirm subscription</h1>
 </body>
 </html>
