--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -12,8 +12,14 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 <body>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <ul class="navbar-nav">
+        <li class="nav-item active">
+            <a class="nav-link" href="#">Grammati</a>
+        </li>
+    </ul>
+</nav>
 <h1>Subscribe for Grammati for early access!</h1>
-<!--<img th:src="@{/images/TacoCloud.png}"/>-->
 <form method="POST" th:object="${subscription}">
     <div>
         <h3>Put your email for packet of daily excercises:</h3>
@@ -21,54 +27,6 @@
         <br/>
         <button>Subscribe</button>
     </div>
-    <!--    <div class="grid">-->
-    <!--        <div class="ingredient-group" id="wraps">-->
-    <!--            <h3>Designate your wrap:</h3>-->
-    <!--            <div th:each="ingredient : ${wrap}">-->
-    <!--                <input name="ingredients" type="checkbox" th:value="${ingredient.id}"-->
-    <!--                />-->
-    <!--                <span th:text="${ingredient.name}">INGREDIENT</span><br/>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--        <div class="ingredient-group" id="proteins">-->
-    <!--            <h3>Pick your protein:</h3>-->
-    <!--            <div th:each="ingredient : ${protein}">-->
-    <!--                <input name="ingredients" type="checkbox" th:value="${ingredient.id}"-->
-    <!--                />-->
-    <!--                <span th:text="${ingredient.name}">INGREDIENT</span><br/>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--        <div class="ingredient-group" id="cheeses">-->
-    <!--            <h3>Choose your cheese:</h3>-->
-    <!--            <div th:each="ingredient : ${cheese}">-->
-    <!--                <input name="ingredients" type="checkbox" th:value="${ingredient.id}"-->
-    <!--                />-->
-    <!--                <span th:text="${ingredient.name}">INGREDIENT</span><br/>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--        <div class="ingredient-group" id="veggies">-->
-    <!--            <h3>Determine your veggies:</h3>-->
-    <!--            <div th:each="ingredient : ${veggies}">-->
-    <!--                <input name="ingredients" type="checkbox" th:value="${ingredient.id}"-->
-    <!--                />-->
-    <!--                <span th:text="${ingredient.name}">INGREDIENT</span><br/>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--        <div class="ingredient-group" id="sauces">-->
-    <!--            <h3>Select your sauce:</h3>-->
-    <!--            <div th:each="ingredient : ${sauce}">-->
-    <!--                <input name="ingredients" type="checkbox" th:value="${ingredient.id}"-->
-    <!--                />-->
-    <!--                <span th:text="${ingredient.name}">INGREDIENT</span><br/>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--    </div>-->
-    <!--    <div>-->
-    <!--        <h3>Name your taco creation:</h3>-->
-    <!--        <input type="text" th:field="*{name}"/>-->
-    <!--        <br/>-->
-    <!--        <button>Submit your taco</button>-->
-    <!--    </div>-->
 </form>
 </body>
 </html>
