Confirmation page styles updated.

--- a/src/main/resources/templates/confirmPage.html
+++ b/src/main/resources/templates/confirmPage.html
@@ -19,6 +19,10 @@
         </li>
     </ul>
 </nav>
-<h1>Please check you email and confirm subscription</h1>
+<div class="container my-5">
+    <h1>Please check you email and confirm subscription</h1>
+    <p class="lead">We have sent you a message to the email you provided. Please open it and click the link to confirm
+        and activate your subscription.</p>
+</div>
 </body>
 </html>
