--- a/src/main/resources/templates/excercise.html
+++ b/src/main/resources/templates/excercise.html
@@ -22,6 +22,7 @@
 <div class="container my-5">
     <form th:object="${excercise}" method="POST">
         <h1 th:text="${excercise.question}">QUESTION</h1>
+        <p th:text="${excercise.formattedTip()}"></p>
         <div th:each="answer : ${excercise.answers}" class="form-check mb-1">
             <label class="form-check-label">
                 <input name="answers" type="radio" class="form-check-input" th:value="${answer}"/><span
