--- a/src/main/resources/templates/subscriptionConfirmedPage.html
+++ b/src/main/resources/templates/subscriptionConfirmedPage.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Grammati</title>
+    <title th:text="${title}">TITLE</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" th:href="@{/styles.css}"/>
