--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -15,15 +15,16 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <ul class="navbar-nav">
         <li class="nav-item active">
-            <a class="nav-link" href="#">Grammati</a>
+            <a class="nav-link" href="#" th:text="${title}">TITLE</a>
         </li>
     </ul>
 </nav>
 <div class="container my-5">
-    <h1>Subscribe Grammati for early access!</h1>
+    <h1>Subscribe <span th:text="${title}">TITLE</span> for early access!</h1>
     <form method="POST" th:object="${subscription}" class="form-group">
         <label for="email" class="lead">Leave us your email to receive a daily packet of excercises:</label>
-        <input id="email" type="email" th:field="*{email}" placeholder="Enter email" class="form-control form-control-lg"/>
+        <input id="email" type="email" th:field="*{email}" placeholder="Enter email"
+               class="form-control form-control-lg"/>
         <br/>
         <button type="submit" class="btn btn-success btn-lg">Subscribe</button>
     </form>
