--- a/src/main/resources/templates/subscriptionConfirmedPage.html
+++ b/src/main/resources/templates/subscriptionConfirmedPage.html
@@ -15,7 +15,7 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <ul class="navbar-nav">
         <li class="nav-item active">
-            <a class="nav-link" href="#">Grammati</a>
+            <a class="nav-link" href="#" th:text="${title}">TITLE</a>
         </li>
     </ul>
 </nav>
