--- a/src/main/resources/templates/confirmPage.html
+++ b/src/main/resources/templates/confirmPage.html
@@ -14,6 +14,9 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <a class="navbar-brand" href="#">
+        <img src="favicon.ico" alt="Logo" style="width:40px;">
+    </a>
     <ul class="navbar-nav">
         <li class="nav-item active">
             <a class="nav-link" href="#" th:text="${title}">TITLE</a>
