--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -19,7 +19,7 @@
     </a>
     <ul class="navbar-nav">
         <li class="nav-item active">
-            <a class="nav-link" href="#">Beware!</a>
+            <a class="nav-link" href="#" th:text="${title}">TITLE</a>
         </li>
     </ul>
 </nav>
