--- a/src/main/resources/templates/exercise.html
+++ b/src/main/resources/templates/exercise.html
@@ -15,7 +15,7 @@
 <body>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <a class="navbar-brand" href="#">
-        <img src="favicon.ico" alt="Logo" style="width:40px;">
+        <img th:src="@{/favicon.ico}" src="" alt="Logo" style="width:40px;">
     </a>
     <ul class="navbar-nav">
         <li class="nav-item active">
