--- a/src/main/resources/templates/quiz.html
+++ b/src/main/resources/templates/quiz.html
@@ -15,7 +15,7 @@
 <body>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <a class="navbar-brand" href="#">
-        <img src="favicon.ico" alt="Logo" style="width:40px;">
+        <img th:src="@{/favicon.ico}" src="" alt="Logo" style="width:40px;">
     </a>
     <ul class="navbar-nav">
         <li class="nav-item active">
@@ -25,50 +25,63 @@
 </nav>
 <div class="container my-5">
     <form method="POST">
-        <h1 th:text="${question1.question}">QUESTION</h1>
-        <p th:text="${question1.formattedTip()}"></p>
-        <div th:each="answer : ${question1.answers}" class="form-check mb-1">
-            <label class="form-check-label">
-                <input name="answers" type="radio" class="form-check-input" th:value="${answer1}"/><span
-                    th:text="${answer}">ANSWER</span>
-            </label>
-            <br/>
-        </div>
-        <hr/>
+        <div th:each="question: ${questions}">
+            <h1 th:text="${question.question}">QUESTION</h1>
+            <p th:text="${question.formattedTip()}"></p>
+            <div th:each="answer : ${question.answers}" class="form-check mb-1">
+                <label class="form-check-label">
+                    <input name="answers" type="radio" class="form-check-input" th:value="${answer}"/><span
+                        th:text="${answer}">ANSWER</span>
+                </label>
+                <br/>
+            </div>
+            <hr/>
 
-        <h1 th:text="${question2.question}">QUESTION</h1>
-        <p th:text="${question2.formattedTip()}"></p>
-        <div th:each="answer : ${question2.answers}" class="form-check mb-1">
-            <label class="form-check-label">
-                <input name="answers" type="radio" class="form-check-input" th:value="${answer2}"/><span
-                    th:text="${answer}">ANSWER</span>
-            </label>
-            <br/>
-        </div>
-        <hr/>
 
-        <h1 th:text="${question3.question}">QUESTION</h1>
-        <p th:text="${question3.formattedTip()}"></p>
-        <div th:each="answer : ${question3.answers}" class="form-check mb-1">
-            <label class="form-check-label">
-                <input name="answers" type="radio" class="form-check-input" th:value="${answer3}"/><span
-                    th:text="${answer}">ANSWER</span>
-            </label>
-            <br/>
-        </div>
-        <hr/>
+            <!--        <h1 th:text="${question1.question}">QUESTION</h1>-->
+            <!--        <p th:text="${question1.formattedTip()}"></p>-->
+            <!--        <div th:each="answer : ${question1.answers}" class="form-check mb-1">-->
+            <!--            <label class="form-check-label">-->
+            <!--                <input name="answers" type="radio" class="form-check-input" th:value="${answer1}"/><span-->
+            <!--                    th:text="${answer}">ANSWER</span>-->
+            <!--            </label>-->
+            <!--            <br/>-->
+            <!--        </div>-->
+            <!--        <hr/>-->
 
-        <h1 th:text="${question4.question}">QUESTION</h1>
-        <p th:text="${question4.formattedTip()}"></p>
-        <div th:each="answer : ${question4.answers}" class="form-check mb-1">
-            <label class="form-check-label">
-                <input name="answers" type="radio" class="form-check-input" th:value="${answer4}"/><span
-                    th:text="${answer}">ANSWER</span>
-            </label>
-            <br/>
-        </div>
-        <hr/>
+            <!--        <h1 th:text="${question2.question}">QUESTION</h1>-->
+            <!--        <p th:text="${question2.formattedTip()}"></p>-->
+            <!--        <div th:each="answer : ${question2.answers}" class="form-check mb-1">-->
+            <!--            <label class="form-check-label">-->
+            <!--                <input name="answers" type="radio" class="form-check-input" th:value="${answer2}"/><span-->
+            <!--                    th:text="${answer}">ANSWER</span>-->
+            <!--            </label>-->
+            <!--            <br/>-->
+            <!--        </div>-->
+            <!--        <hr/>-->
 
+            <!--        <h1 th:text="${question3.question}">QUESTION</h1>-->
+            <!--        <p th:text="${question3.formattedTip()}"></p>-->
+            <!--        <div th:each="answer : ${question3.answers}" class="form-check mb-1">-->
+            <!--            <label class="form-check-label">-->
+            <!--                <input name="answers" type="radio" class="form-check-input" th:value="${answer3}"/><span-->
+            <!--                    th:text="${answer}">ANSWER</span>-->
+            <!--            </label>-->
+            <!--            <br/>-->
+            <!--        </div>-->
+            <!--        <hr/>-->
+
+            <!--        <h1 th:text="${question4.question}">QUESTION</h1>-->
+            <!--        <p th:text="${question4.formattedTip()}"></p>-->
+            <!--        <div th:each="answer : ${question4.answers}" class="form-check mb-1">-->
+            <!--            <label class="form-check-label">-->
+            <!--                <input name="answers" type="radio" class="form-check-input" th:value="${answer4}"/><span-->
+            <!--                    th:text="${answer}">ANSWER</span>-->
+            <!--            </label>-->
+            <!--            <br/>-->
+            <!--        </div>-->
+            <!--        <hr/>-->
+        </div>
         <button type="submit" class="btn btn-success btn-lg mt-2">Check</button>
     </form>
 </div>
