--- a/src/main/resources/templates/exercise.html
+++ b/src/main/resources/templates/exercise.html
@@ -27,10 +27,10 @@
     <form th:object="${question}" method="POST">
         <h1 th:text="${question.question}">QUESTION</h1>
         <p th:text="${question.formattedTip()}"></p>
-        <div th:each="answer : ${question.answers}" class="form-check mb-1">
+        <div th:each="answerDto : ${question.answers}" class="form-check mb-1">
             <label class="form-check-label">
-                <input name="answers" type="radio" class="form-check-input" th:value="${answer}"/><span
-                    th:text="${answer}">ANSWER</span>
+                <input name="answers" type="radio" class="form-check-input" th:value="${answerDto}"/><span
+                    th:text="${answerDto}">ANSWER</span>
             </label>
             <br/>
         </div>
